--- a/client/package.json
+++ b/client/package.json
@@ -27,17 +27,21 @@
   "dependencies": {
     "axios": "^0.21.4",
     "date-fns": "^2.23.0",
+    "element-plus": "^1.1.0-beta.12",
     "ramda": "^0.27.1",
     "vue": "^3.2.6",
+    "vue-i18n": "^9.1.7",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^2.4.0",
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/compiler-sfc": "^3.2.6",
     "sass": "^1.41.0",
     "sass-loader": "^12.1.0",
     "typescript": "^4.4.3",
-    "vite": "^2.5.4"
+    "vite": "^2.5.4",
+    "vite-plugin-element-plus": "^0.0.12"
   }
 }
