--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.21.4",
     "date-fns": "^2.23.0",
     "element-plus": "^1.1.0-beta.12",
+    "memoize-one": "^5.2.1",
     "ramda": "^0.27.1",
     "vue": "^3.2.6",
     "vue-i18n": "^9.1.7",
