--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "element-plus": "^1.1.0-beta.12",
     "memoize-one": "^5.2.1",
     "ramda": "^0.27.1",
+    "ramda-adjunct": "^2.34.0",
     "vue": "^3.2.6",
     "vue-i18n": "^9.1.7",
     "vue-router": "^4.0.11",
