update client WorkTimeService

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 CLIENT_PORT=3080
-CLIENT_ROOT_API=https://localhost:3030/api/v1
+CLIENT_ROOT_API=https://localhost:3030/api
 CLIENT_PERSISTENT_STORE_KEY=cash
 
 SERVER_PORT=3030
