--- a/server/package.json
+++ b/server/package.json
@@ -43,12 +43,11 @@
     "@nestjs/core": "^8.1.1",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^9.0.1",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.1.1",
-    "@typegoose/typegoose": "^9.2.0",
     "class-validator": "^0.13.1",
     "mongoose": "^6.0.12",
-    "nestjs-typegoose": "^7.1.38",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "ramda": "^0.27.1",
@@ -62,7 +61,6 @@
     "@nestjs/testing": "^8.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.11.3",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
