--- a/server/package.json
+++ b/server/package.json
@@ -63,6 +63,7 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.3",
     "@types/passport-jwt": "^3.0.6",
+    "@types/ramda": "^0.27.45",
     "@types/supertest": "^2.0.11",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
