--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
@@ -44,6 +44,7 @@
     "sass-loader": "^12.1.0",
     "typescript": "^4.4.3",
     "vite": "^2.5.4",
-    "vite-plugin-element-plus": "^0.0.12"
+    "vite-plugin-element-plus": "^0.0.12",
+    "vue-tsc": "^0.28.9"
   }
 }
